--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,13 +2,13 @@
     <nav class="nav">
         <ul class="nav-list">
             <li class="nav-item">
-                <a href="./01-gallery.html" class="nav-link trans-link"
-                    >Gallery</a
-                >
+                <a href="/01-timer.html" class="nav-link trans-link">Timer</a>
             </li>
 
             <li class="nav-item">
-                <a href="./02-form.html" class="nav-link trans-link">Form</a>
+                <a href="/02-snackbar.html" class="nav-link trans-link"
+                    >Snackbar</a
+                >
             </li>
         </ul>
     </nav>
