--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,11 +2,11 @@
     <nav class="nav">
         <ul class="nav-list">
             <li class="nav-item">
-                <a href="/01-timer.html" class="nav-link trans-link">Timer</a>
+                <a href="./01-timer.html" class="nav-link trans-link">Timer</a>
             </li>
 
             <li class="nav-item">
-                <a href="/02-snackbar.html" class="nav-link trans-link"
+                <a href="./02-snackbar.html" class="nav-link trans-link"
                     >Snackbar</a
                 >
             </li>
